--- a/config.ini
+++ b/config.ini
@@ -1,6 +1,6 @@
 [twitter]
-api_key=oaRf5kXDorQDET6kG4MBymKfq
-api_key_secret=OdbJfeyVrTlp73BK0Nl0x96YwMxEYoYzH8w2KToDMNGz0xWYZK
+api_key= ...
+api_key_secret= ...
 
-access_token = 920620295173664768-F4khrg9fAKQERVUWAjTsIRpKbgXt328
-access_token_secret = nftTqbkKRwUrYrSMM6y9PLiSWAGLM7kp3X7SMetTJ0N0M
+access_token = ...
+access_token_secret = ...
